--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
 name: model_concepts
-version: 0.1.0
+version: 1.0.0
 author: Dzenan Ridjanovic <dzenanr@gmail.com>
 description: A graphical model designer for dartling.
-homepage: http://ondart.me/
+homepage: https://github.com/dzenanr/model_concepts
+documentation: http://goo.gl/Fd08zZ
+environment:
+  sdk: '>=0.8.10+8 <2.0.0'
 dependencies:
-  browser: any
+  browser: '>=0.9.0 <0.10.0'
