--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: model_concepts
 version: 1.0.2
-author: Dzenan Ridjanovic <dzenanr@gmail.com>
+
 description: A graphical model designer for dartling.
 homepage: https://github.com/dzenanr/model_concepts
 documentation: http://goo.gl/Fd08zZ
-dependencies:
-  browser: any
+environment:
+  sdk: '>=2.18.6 <3.0.0'
+
